| Summary: | ASTERISK-22446: Build warnings when dev-mode disabled. | ||
| Reporter: | David M. Lee (dlee) | Labels: | |
| Date Opened: | 2013-09-03 12:45:11 | Date Closed: | 2013-09-06 13:51:08 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | |
| Versions: | 12.0.0-alpha1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | From IRC:
{quote} Qwell: http.c gives a warning when building without dev-mode, FYI Qwell: and stasis/app.c, possibly also without dev-mode {quote} | ||
| Comments: | |||